--- a/Website/Index.html
+++ b/Website/Index.html
@@ -125,9 +125,7 @@
 
             #settingsContainer.hidden {
                 transform: translate(-50%,calc( - 50% - 10px));
-                opacity:0;
-                pointer-events:none
-            }
+                opacity:0;pointer-events:none}
 
             #settingsBtn {
                 bottom: 0;
@@ -209,30 +207,30 @@
             <rect x="0" y="0" width="100" height="100" mask="url(#mask)" style="fill:var(--ui-color)"/>
         </svg>
         <script>
-            let slidersEl = document.getElementById("sliders");
-            let curtainEl = document.getElementById("curtain");
-            let settingsContainerEl = document.getElementById("settingsContainer");
-            let settingsBtn = document.getElementById("settingsBtn");
-            let colorVarsEl = document.getElementById("colorVars");
+            let slidersEl = document.getElementById('sliders');
+            let curtainEl = document.getElementById('curtain');
+            let settingsContainerEl = document.getElementById('settingsContainer');
+            let settingsBtn = document.getElementById('settingsBtn');
+            let colorVarsEl = document.getElementById('colorVars');
             class Slider {
                 constructor(name, forceRgb=true) {
                     this.name = name;
-                    this.containerEl = document.createElement("div");
-                    this.containerEl.classList.add("sliderContainer");
+                    this.containerEl = document.createElement('div');
+                    this.containerEl.classList.add('sliderContainer');
                     slidersEl.appendChild(this.containerEl);
-                    this.textEl = document.createElement("div");
-                    this.textEl.classList.add("sliderText");
+                    this.textEl = document.createElement('div');
+                    this.textEl.classList.add('sliderText');
                     this.containerEl.appendChild(this.textEl);
-                    this.rangeEl = document.createElement("input");
-                    this.rangeEl.type = "range";
-                    this.rangeEl.min = "0";
-                    this.rangeEl.max = "255";
+                    this.rangeEl = document.createElement('input');
+                    this.rangeEl.type = 'range';
+                    this.rangeEl.min = '0';
+                    this.rangeEl.max = '255';
                     this.containerEl.appendChild(this.rangeEl);
-                    this.rangeEl.addEventListener("input", (_)=>{
+                    this.rangeEl.addEventListener('input', (_)=>{
                         this.update();
                     }
                     );
-                    this.rangeEl.addEventListener("change", (_)=>{
+                    this.rangeEl.addEventListener('change', (_)=>{
                         setServerState(forceRgb);
                     }
                     );
@@ -253,41 +251,41 @@
                     updateCssColor();
                 }
                 updateText() {
-                    this.textEl.textContent = this.name + ": " + this.value;
+                    this.textEl.textContent = this.name + ': ' + this.value;
                 }
             }
             class DropDown {
-                constructor({name="", setParamName="", possibleValues=[], modifySendParams=null}={}) {
-                    let labelEl = document.createElement("label");
-                    labelEl.classList.add("selectLabel");
-                    labelEl.textContent = name + ":";
+                constructor({name='', setParamName='', possibleValues=[], modifySendParams=null}={}) {
+                    let labelEl = document.createElement('label');
+                    labelEl.classList.add('selectLabel');
+                    labelEl.textContent = name + ':';
                     settingsContainerEl.appendChild(labelEl);
                     this.name = name;
-                    this._value = "";
+                    this._value = '';
                     this.setParamName = setParamName;
                     this.modifySendParams = modifySendParams;
-                    let selectContainer = document.createElement("div");
-                    selectContainer.classList.add("selectContainer");
+                    let selectContainer = document.createElement('div');
+                    selectContainer.classList.add('selectContainer');
                     labelEl.appendChild(selectContainer);
-                    this.el = document.createElement("select");
+                    this.el = document.createElement('select');
                     selectContainer.appendChild(this.el);
-                    this.el.addEventListener("change", (_)=>{
+                    this.el.addEventListener('change', (_)=>{
                         this.onChange();
                     }
                     );
                     for (const val of possibleValues) {
-                        let optionEl = document.createElement("option");
+                        let optionEl = document.createElement('option');
                         optionEl.value = optionEl.textContent = val;
                         this.el.appendChild(optionEl);
                     }
-                    this.el.value = "";
-                    this.fakeValueEl = document.createElement("div");
-                    this.fakeValueEl.classList.add("dropdownFakeValue");
+                    this.el.value = '';
+                    this.fakeValueEl = document.createElement('div');
+                    this.fakeValueEl.classList.add('dropdownFakeValue');
                     selectContainer.appendChild(this.fakeValueEl);
                 }
                 async onChange() {
                     this.value = this.el.value;
-                    this.el.value = "";
+                    this.el.value = '';
                     let sendParams = {};
                     sendParams[this.setParamName] = this.value;
                     if (this.modifySendParams) {
@@ -297,7 +295,7 @@
                     }
                     let success = await sendServerState(sendParams);
                     if (success) {
-                        doToastMessage(this.name + " Updated");
+                        doToastMessage(this.name + ' Updated');
                     }
                 }
                 get value() {
@@ -310,10 +308,10 @@
             }
             class Button {
                 constructor(label, cb) {
-                    this.el = document.createElement("button");
+                    this.el = document.createElement('button');
                     this.el.textContent = label;
                     settingsContainer.appendChild(this.el);
-                    this.el.addEventListener("click", (_)=>{
+                    this.el.addEventListener('click', (_)=>{
                         cb();
                     }
                     );
@@ -330,7 +328,7 @@
                                 doToastMessage(await response.text(), true);
                             }
                         } catch (_) {
-                            doToastMessage("Failed to connect", true);
+                            doToastMessage('Failed to connect', true);
                         }
                     }
                     );
@@ -339,21 +337,21 @@
             class LinkButton extends Button {
                 constructor(label, url) {
                     super(label, _=>{
-                        window.open(url, "_blank");
+                        window.open(url, '_blank');
                     }
                     );
                 }
             }
-            let Sl = new Slider("Brightness",false);
-            let Sr = new Slider("Red");
-            let Sg = new Slider("Green");
-            let Sb = new Slider("Blue");
+            let Sl = new Slider('Brightness',false);
+            let Sr = new Slider('Red');
+            let Sg = new Slider('Green');
+            let Sb = new Slider('Blue');
             let Dm = new DropDown({
-                name: "Mode",
-                setParamName: "m",
-                possibleValues: ["OFF", "ON", "WIFI", "CLOCK", "BLINK", "BPM", "CONFETTI", "FLASH", "GLITTER", "JUGGLE", "MOVE", "RAINBOW", "SINELON", "SINELON2"],
+                name: 'Mode',
+                setParamName: 'm',
+                possibleValues: ['OFF', 'ON', 'WIFI', 'CLOCK', 'BLINK', 'BPM', 'CONFETTI', 'FLASH', 'GLITTER', 'JUGGLE', 'MOVE', 'RAINBOW', 'SINELON', 'SINELON2'],
                 modifySendParams: (oldParams)=>{
-                    if (Dm.value == "WIFI") {
+                    if (Dm.value == 'WIFI') {
                         let extraData = this.getServerStateMessageData(true);
                         return {
                             ...oldParams,
@@ -364,55 +362,55 @@
                 ,
             });
             let Dbm = new DropDown({
-                name: "Bootmode",
-                setParamName: "bm",
-                possibleValues: ["OFF", "ON", "WIFI", "CLOCK"]
+                name: 'Bootmode',
+                setParamName: 'bm',
+                possibleValues: ['OFF', 'ON', 'WIFI', 'CLOCK']
             });
             let Ddm = new DropDown({
-                name: "Doublepress mode",
-                setParamName: "dm",
-                possibleValues: ["WIFI", "CLOCK", "BLINK", "BPM", "CONFETTI", "FLASH", "GLITTER", "JUGGLE", "MOVE", "RAINBOW", "SINELON", "SINELON2"]
+                name: 'Doublepress mode',
+                setParamName: 'dm',
+                possibleValues: ['WIFI', 'CLOCK', 'BLINK', 'BPM', 'CONFETTI', 'FLASH', 'GLITTER', 'JUGGLE', 'MOVE', 'RAINBOW', 'SINELON', 'SINELON2']
             });
-            settingsContainer.appendChild(document.createElement("br"));
+            settingsContainer.appendChild(document.createElement('br'));
             let Di = new DropDown({
-                name: "Auto brightness",
-                setParamName: "i",
-                possibleValues: ["FALSE", "TRUE"]
+                name: 'Auto brightness',
+                setParamName: 'i',
+                possibleValues: ['FALSE', 'TRUE']
             });
-            settingsContainer.appendChild(document.createElement("br"));
+            settingsContainer.appendChild(document.createElement('br'));
             let Dha = new DropDown({
-                name: "Hourly animation",
-                setParamName: "ha",
-                possibleValues: ["FALSE", "TRUE"]
+                name: 'Hourly animation',
+                setParamName: 'ha',
+                possibleValues: ['FALSE', '2', '5', '10']
             });
             let Dhl = new DropDown({
-                name: "Hourly lines",
-                setParamName: "hl",
-                possibleValues: ["FALSE", "1", "2", "4", "8", "16", "32"]
+                name: 'Hourly lines',
+                setParamName: 'hl',
+                possibleValues: ['FALSE', '1', '2', '4', '8', '16', '32']
             });
             let Da = new DropDown({
-                name: "Analog hours",
-                setParamName: "a",
-                possibleValues: ["FALSE", "TRUE"]
+                name: 'Analog hours',
+                setParamName: 'a',
+                possibleValues: ['FALSE', 'TRUE']
             });
             let Dc = new DropDown({
-                name: "Analog clock",
-                setParamName: "c",
-                possibleValues: ["FALSE", "TRUE"]
+                name: 'Analog clock',
+                setParamName: 'c',
+                possibleValues: ['FALSE', 'TRUE']
             });
-            settingsContainer.appendChild(document.createElement("br"));
-            let Bo = new RequestButton("Enable OTA","/ota","OTA enabled");
-            let Bt = new RequestButton("Sync time","/time","Time updated");
-            let Br = new RequestButton("Reset","/set?m=RESET","ESP restarting");
-            settingsContainer.appendChild(document.createElement("br"));
-            new LinkButton("Info","/info");
-            new LinkButton("Taks","/task");
-            new LinkButton("Saved settings","/ip");
-            curtainEl.addEventListener("click", _=>this.setSettingsVisibility(false));
-            settingsBtn.addEventListener("click", _=>this.setSettingsVisibility(true));
+            settingsContainer.appendChild(document.createElement('br'));
+            let Bo = new RequestButton('Enable OTA','/ota','OTA enabled');
+            let Bt = new RequestButton('Sync time','/time','Time updated');
+            let Br = new RequestButton('Reset','/set?m=RESET','ESP restarting');
+            settingsContainer.appendChild(document.createElement('br'));
+            new LinkButton('Info','/info');
+            new LinkButton('Taks','/task');
+            new LinkButton('Saved settings','/ip');
+            curtainEl.addEventListener('click', _=>this.setSettingsVisibility(false));
+            settingsBtn.addEventListener('click', _=>this.setSettingsVisibility(true));
             function setSettingsVisibility(visible) {
-                curtainEl.classList.toggle("hidden", !visible);
-                settingsContainerEl.classList.toggle("hidden", !visible);
+                curtainEl.classList.toggle('hidden', !visible);
+                settingsContainerEl.classList.toggle('hidden', !visible);
             }
             function updateCssColor() {
                 let r = Math.pow(Sr.value01 * Sl.value01, 1 / 2.2) * 255;
@@ -421,7 +419,7 @@
                 let selectedColor = `rgb(${r},${g},${b})`;
                 let perceivedBrightness = Math.round((r * 299 + g * 587 + b * 114) / 1000);
                 let uiBrightness = perceivedBrightness > 125 ? 0 : 255;
-                let uiColRGB = uiBrightness + "," + uiBrightness + "," + uiBrightness;
+                let uiColRGB = uiBrightness + ',' + uiBrightness + ',' + uiBrightness;
                 let uiColor = `rgb(${uiColRGB})`;
                 let uiColorTrans1 = `rgba(${uiColRGB},0.8)`;
                 let uiColorTrans2 = `rgba(${uiColRGB},0.5)`;
@@ -429,16 +427,16 @@
             }
             updateCssColor();
             async function getServerState() {
-                try{
-                    let response = await fetch("/get");
-                    if(response.ok){
+                try {
+                    let response = await fetch('/get');
+                    if (response.ok) {
                         await updateServerStateFromResponse(response);
-                    }else{
+                    } else {
                         doToastMessage(await response.text(), true);
                     }
-                }catch(e){
+                } catch (e) {
                     console.log(e);
-                    doToastMessage("Failed to connect", true);
+                    doToastMessage('Failed to connect', true);
                 }
             }
             getServerState();
@@ -450,7 +448,7 @@
                 let state = {
                     l: Sl.value
                 };
-                if (Dm.value == "WIFI" || forceRgb) {
+                if (Dm.value == 'WIFI' || forceRgb) {
                     state = {
                         ...state,
                         r: Sr.value,
@@ -464,10 +462,10 @@
                 let state = getServerStateMessageData(forceRgb);
                 await sendServerState(state);
             }
-            async function sendServerState(params, endPoint="/set") {
+            async function sendServerState(params, endPoint='/set') {
                 let searchParams = new URLSearchParams(params);
                 try {
-                    let response = await fetch(endPoint + "?" + searchParams);
+                    let response = await fetch(endPoint + '?' + searchParams);
                     if (response.ok) {
                         await updateServerStateFromResponse(response);
                         return true;
@@ -475,7 +473,7 @@
                         doToastMessage(await response.text(), true);
                     }
                 } catch (e) {
-                    doToastMessage("Failed to connect", true);
+                    doToastMessage('Failed to connect', true);
                 }
             }
             async function updateServerStateFromResponse(response) {
@@ -500,25 +498,25 @@
                 await new Promise((r)=>setTimeout(r, ms));
             }
             function recalculateStyle(elem) {
-                window.getComputedStyle(elem).getPropertyValue("top");
+                window.getComputedStyle(elem).getPropertyValue('top');
             }
             async function doToastMessage(message, error=false) {
-                let el = document.createElement("div");
-                el.classList.add("toast","slideIn","hidden");
-                el.classList.toggle("error", error);
+                let el = document.createElement('div');
+                el.classList.add('toast', 'slideIn', 'hidden');
+                el.classList.toggle('error', error);
                 el.textContent = message;
                 document.body.appendChild(el);
                 recalculateStyle(el);
-                el.classList.remove("hidden");
+                el.classList.remove('hidden');
                 await timeout(5000);
-                el.classList.add("hidden");
+                el.classList.add('hidden');
                 await timeout(200);
                 el.parentElement.removeChild(el);
             }
             async function installSw() {
-                if (!("serviceWorker"in window.navigator))
+                if (!('serviceWorker'in window.navigator))
                     return;
-                await navigator.serviceWorker.register("sw.js");
+                await navigator.serviceWorker.register('sw.js');
             }
             installSw();
         </script>
